# mantis

./: .copier-answers.yaml  .dockerignore  .gitattributes  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  README.md  Taskfile.dist.yaml  docker-compose.yaml  entrypoint.sh  environment.yaml  environment.yml  index.html  pyproject.toml  requirements.txt
.github/: release-drafter.yml
.github/workflows/: docker-build.yml  docker-push.yml  docs.yaml  docs.yml  draft.yaml  draft.yml  lint.yaml  registry.yaml  registry.yml  test-docker.yaml  test-docker.yml  test.yml
docs/: docusaurus.config.mts
docs/docs/: 01-Index.md  02-Usage.md  03-Configuration.md
emischeduler/: README.md  pyproject.toml
emischeduler/docs/: mkdocs.yml
emischeduler/docs/docs/: index.md
emischeduler/src/emischeduler/: __init__.py  __main__.py  config.py  dashboard.py  queues.py  redis.py  scheduling.py  server.py  utils.py  workers.py
emischeduler/src/emischeduler/api/: app.py  models.py
emischeduler/src/emischeduler/api/paths/: router.py
emischeduler/src/emischeduler/api/paths/status/: controller.py  models.py  router.py
emischeduler/src/emischeduler/api/paths/tasks/: controller.py  models.py  router.py
emischeduler/src/emischeduler/archive/: client.py
emischeduler/src/emischeduler/config/: __init__.py  base.py  models.py  utils.py
emischeduler/src/emischeduler/jobs/: cleanup.py  fetch.py  reserve.py  stream.py  sync.py
emischeduler/src/emischeduler/models/: base.py  data.py  reserve.py  stream.py  sync.py  utils.py
emischeduler/src/emischeduler/scheduler/: app.py  log.py
emischeduler/src/emischeduler/scheduler/conditions/: once.py
emischeduler/src/emischeduler/scheduler/tasks/: cleanup.py  fetch.py  reserve.py  stream.py  sync.py
emischeduler/src/emischeduler/shows/: client.py
emischeduler/src/emischeduler/shows/models/: api.py  data.py
emischeduler/src/emischeduler/stream/: client.py
emischeduler/src/emischeduler/stream/models/: api.py  data.py
emischeduler/tests/functional/: test_emischeduler.py
search/: search_index.json
src/emischeduler/: __main__.py  server.py  state.py  utils.py
src/emischeduler/api/: app.py  validator.py
src/emischeduler/api/routes/: router.py
src/emischeduler/api/routes/ping/: controller.py  models.py  router.py  service.py
src/emischeduler/api/routes/tasks/: controller.py  errors.py  models.py  router.py  service.py
src/emischeduler/config/: base.py  builder.py  models.py
src/emischeduler/datarecords/: errors.py  service.py
src/emischeduler/emiarchive/: errors.py  models.py  service.py
src/emischeduler/emishows/: models.py  service.py
src/emischeduler/emistream/: errors.py  models.py  service.py
src/emischeduler/scheduling/: events.py  lock.py  queue.py  scheduler.py  store.py  synchronizer.py
src/emischeduler/scheduling/cleaning/: cleaner.py  factory.py
src/emischeduler/scheduling/cleaning/strategies/: all.py  day.py
src/emischeduler/scheduling/conditions/: factory.py
src/emischeduler/scheduling/conditions/conditions/: at.py
src/emischeduler/scheduling/operations/: factory.py
src/emischeduler/scheduling/operations/operations/: stream.py
src/emischeduler/services/cleaner/: service.py
src/emischeduler/services/datarecords/: models.py  service.py
src/emischeduler/services/emilounge/: models.py  serializer.py  service.py
src/emischeduler/services/emirecords/: models.py  serializer.py  service.py
src/emischeduler/services/emishows/: models.py  serializer.py  service.py
src/emischeduler/services/emistream/: models.py  service.py  types.py
src/emischeduler/services/ping/: models.py  service.py
src/emischeduler/services/scheduler/: service.py  store.py
src/emischeduler/services/scheduler/cleaning/: factory.py
src/emischeduler/services/scheduler/conditions/: factory.py
src/emischeduler/services/scheduler/operations/: factory.py
src/emischeduler/services/synchronizer/: service.py
src/emischeduler/utils/: time.py
src/mantis/: __main__.py  server.py  state.py
src/mantis/api/: app.py  lifespans.py  openapi.py  validator.py
src/mantis/api/routes/: router.py
src/mantis/config/: base.py  builder.py  models.py
src/mantis/models/events/: bar.py  event.py  fields.py  foo.py  test.py  types.py
src/mantis/services/beaver/: models.py  serializer.py  service.py
src/mantis/services/cleaner/: service.py
src/mantis/services/events/: models.py  service.py
src/mantis/services/gecko/: models.py  serializer.py  service.py
src/mantis/services/numbat/: models.py  serializer.py  service.py
src/mantis/services/octopus/: models.py  service.py  types.py
src/mantis/services/ping/: models.py  service.py
src/mantis/services/scheduler/: errors.py  events.py  lock.py  models.py  queue.py  service.py  store.py
src/mantis/services/synchronizer/: service.py
src/mantis/services/test/: models.py  service.py
src/mantis/utils/: asyncify.py  mime.py  time.py
tests/integration/: conftest.py  test_tasks.py
usage/: index.html
(+51 files in other folders)
