[tool.poetry]
name = "emischeduler"
version = "0.11.0"
description = "Emission scheduling 📅"
authors = ["radio-aktywne <it@radioaktywne.pl>"]

[tool.poetry.dependencies]
python = "^3.11"
# Pydantic is used to define data models
pydantic = "^2.6"
pydantic-settings = "^2.2"
# OmegaConf is used to load configuration
omegaconf = "^2.3"
# Typer and Rich are used to build CLIs
typer = { version = "^0.9", extras = ["all"] }
rich = "^13.7"
# Litestar and Uvicorn are used to build async APIs
litestar = "^2.6"
uvicorn = { version = "^0.28", extras = ["standard"] }
# For correct handling of timezones
tzdata = "*"
# Streaming utilities
pystreams = { git = "https://github.com/radio-aktywne/package-pystreams.git", tag = "0.8.0" }
# Locking utilities
pylocks = { git = "https://github.com/radio-aktywne/package-pylocks.git", tag = "0.3.0" }
# Storage utilities
pystores = { git = "https://github.com/radio-aktywne/package-pystores.git", tag = "0.4.0" }
# Signaling utilities
pyevents = { git = "https://github.com/radio-aktywne/package-pyevents.git", tag = "0.3.0" }
# Queuing utilities
pyqueues = { git = "https://github.com/radio-aktywne/package-pyqueues.git", tag = "0.3.0" }
# Task scheduler
pyscheduler = { git = "https://github.com/radio-aktywne/package-pyscheduler.git", tag = "0.4.0" }
# Helps building API clients
gracy = "^1.33"
# MinIO client
minio = "^7.2"
# Async HTTP requests
httpx = "^0.27"

[tool.poetry.group.test.dependencies]
pytest = "^8.1"
# Asyncio support for pytest
pytest-asyncio = "^0.23"
# Running dependent services in containers
testcontainers = "^4.0"
# MinIO client
minio = "^7.2"
# Async HTTP requests
httpx = "^0.27"

[tool.poetry.scripts]
# Register CLI
emischeduler = "emischeduler.__main__:cli"

# See: https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
