[tool.poetry]
package-mode = true
name = "mantis"
version = "0.14.0"
description = "Broadcast scheduling 📅"
authors = ["radio-aktywne <it@radioaktywne.pl>"]

[tool.poetry.dependencies]
python = "^3.12"
# Pydantic is used to define data models
pydantic = "^2.8"
pydantic-settings = "^2.4"
# Typer and Rich are used to build CLIs
typer = "^0.12"
rich = "^13.7"
# Litestar and Uvicorn are used to build async APIs
litestar = "^2.10"
uvicorn = { version = "^0.30", extras = ["standard"] }
# For correct handling of timezones
tzdata = "*"
# Environment variables loader
python-dotenv = "^1.0"
# Streaming utilities
pystreams = { git = "https://github.com/radio-aktywne/pystreams.git", tag = "0.11.0" }
# Locking utilities
pylocks = { git = "https://github.com/radio-aktywne/pylocks.git", tag = "0.5.0" }
# Storage utilities
pystores = { git = "https://github.com/radio-aktywne/pystores.git", tag = "0.6.0" }
# Signaling utilities
pyevents = { git = "https://github.com/radio-aktywne/pyevents.git", tag = "0.5.0" }
# Queuing utilities
pyqueues = { git = "https://github.com/radio-aktywne/pyqueues.git", tag = "0.5.0" }
# Task scheduler
pyscheduler = { git = "https://github.com/radio-aktywne/pyscheduler.git", tag = "0.6.0" }
# Helps building API clients
gracy = "^1.33"
# Async HTTP requests
httpx = "^0.27"

[tool.poetry.group.test.dependencies]
pytest = "^8.3"
# Asyncio support for pytest
pytest-asyncio = "^0.23"
# Running dependent services in containers
testcontainers = "^4.7"
# Async HTTP requests
httpx = "^0.27"

[tool.poetry.scripts]
# Register CLI
mantis = "mantis.__main__:cli"

# See: https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
